--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div id="simpsons"></div>
     </div>
-
+<button id="btn">Recharger</button>
 
 </section>
 
@@ -28,7 +28,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
 <script>
     // This function loads pokemon data from the Pokemon API
-    function fetchPokemonJSON() {
+    function fetchSimpsonsJSON() {
         // Feel free to download this HTML and edit it, to use another Pokemon ID
         const url = `https://simpsons-quotes-api.herokuapp.com/quotes`;
         axios.get(url)
@@ -48,8 +48,11 @@
                 document.querySelector('#simpsons').innerHTML = simpsonsHtml;
             });
     }
+    fetchSimpsonsJSON();
 
-    fetchPokemonJSON();
+    document.getElementById("btn").addEventListener("click", function() {
+        fetchSimpsonsJSON();
+    });
 </script>
 </body>
 
